<resources>
    <plurals name="item_pacote_dias">
        <item quantity="one">%d dia</item>
        <item quantity="other">%d dias</item>
    </plurals>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="item_pacote_valor">R$ %.2f</string>
    <string name="titulo_app_bar">Pacote</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="conteudo_pacote_imagem">Imagem do local da viagem.</string>
    <string name="indica_preco">Preço Final:</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="resumo_pacote_data_viagem">%s - %s de %d</string>
    <string name="titulo_resumo_pacote">Resumo do Pacote</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="nome_cartao">Nome no cartão</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="titulo_pagamento">Pagamento</string>
    <string name="mascara_para_nome_cartao">abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
    <string name="titulo_resumo_compra">Resumo da compra</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="descricao_resumo_compra">Confira o resumo da compra:</string>
</resources>
