<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_fundo_parabens"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/conteudo_do_banner_inicial" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/resumo_compra_fundo_parabens"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_fundo_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_fundo_parabens"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_fundo_parabens"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/resumo_compra_efetuada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_parabens" />

    <TextView
        android:id="@+id/resumo_compra_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/descricao_resumo_compra"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_fundo_parabens" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_local"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/conteudo_pacote_imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_resumo"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_imagem_local"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="São Paulo"/>

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_local"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_local"
        tools:text="08/12 - 10/12 de 2017"/>

    <TextView
        android:id="@+id/resumo_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_data"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_data"
        tools:text="R$ 243,99"/>

</android.support.constraint.ConstraintLayout>